# sanger-sequencing

./: .gitattributes  .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
docs/: Makefile  conf.py  evaluate_full_table.ipynb  index.rst  installation.rst  modules.rst  requirements.txt  sanger_sequencing.analysis.rst  sanger_sequencing.clients.rst  sanger_sequencing.rst  sanger_sequencing.validation.rst  sanger_sequencing.validation.schemata.rst  usage.rst
src/sanger_sequencing/: __init__.py  _version.py  api.py  config.py  helpers.py
src/sanger_sequencing/analysis/: __init__.py  alignment.py  sample.py  summary.py
src/sanger_sequencing/clients/: __init__.py  benchling.py  ice.py  labcollector.py  repository_client.py
src/sanger_sequencing/model/: __init__.py  conflict_report.py  plasmid_report.py  sample_report.py  sanger_report.py
src/sanger_sequencing/reports/: __init__.py  plasmid_report.py  sample_report.py  sanger_report.py
src/sanger_sequencing/validation/: __init__.py  plasmid.py  sample.py  template.py
src/sanger_sequencing/validation/schemata/: __init__.py  template.json
tests/test_analysis/: test_alignment.py  test_sample_trimming.py  test_summary.py
tests/test_clients/: test_benchling.py  test_ice.py  test_labcollector.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
tests/test_unit/clients/: test_labcollector.py
tests/test_unit/validation/: test_sample.py  test_template.py
tests/test_validation/: test_plasmid.py  test_template.py
