[metadata]
name = sanger-sequencing
url = https://github.com/biosustain/sanger-sequencing
download_url = https://pypi.org/project/sanger-sequencing/
author = Novo Nordisk Foundation Center for Biosustainability, Technical University Denmark
author_email = niso@biosustain.dtu.dk
maintainer = Moritz E. Beber
maintainer_email = morbeb@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache Software License Version 2.0
description = Semi-automated Sanger sequence analysis for transformation verification.
long_description = file: README.rst
keywords =
    Sanger sequencing
    automated analysis
    mix2seq
    plasmid verification

[options]
zip_safe = True
install_requires =
    depinfo
    pydantic
python_requires = >=3.7
packages = find:

[options.packages.find]
where = src

[options.package_data]
sanger_sequencing.validation.schemata =
    *.json


[options.extras_require]
analysis =
    biopython
    numpy
    pandas
    xlrd
    requests
    goodtables
development =
    black
    isort
    tox
    twine

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/sanger_sequencing/_version.py
versionfile_build = sanger_sequencing/_version.py
tag_prefix =
parentdir_prefix = sanger-sequencing-
